scaffold cultivation maintainance

--- a/test/fixtures/logs.yml
+++ b/test/fixtures/logs.yml
@@ -2,8 +2,16 @@
 
 one:
   pmu_id: 
-  operations_id: 
+  cultivation_id: 
+  irrigation_id: 
+  fertilization_id: 
+  phyto_protection_id: 
+  maintenance_id: 
 
 two:
   pmu_id: 
-  operations_id: 
+  cultivation_id: 
+  irrigation_id: 
+  fertilization_id: 
+  phyto_protection_id: 
+  maintenance_id: 
