Events log book

--- a/test/fixtures/logs.yml
+++ b/test/fixtures/logs.yml
@@ -2,16 +2,8 @@
 
 one:
   pmu_id: 
-  cultivation_id: 
-  irrigation_id: 
-  fertilization_id: 
-  phyto_protection_id: 
-  maintenance_id: 
+  logentry_id: 
 
 two:
   pmu_id: 
-  cultivation_id: 
-  irrigation_id: 
-  fertilization_id: 
-  phyto_protection_id: 
-  maintenance_id: 
+  logentry_id: 
